MyHelp now takes name from constructor, and has test. Time to move it to com.darwinsys.util? ClueList is a mapping from words to clues.